--- a/data/index.html
+++ b/data/index.html
@@ -67,6 +67,18 @@
           },
         });
       }
+
+      function get_config() {
+        var someUrl = "/config";
+        $.ajax({
+          url: someUrl,
+          dataType: "json",
+          success: function (response) {
+            $("#ssidName").html(response.config["ssid"]);
+            $("#pass").html(response.config["pass"]);
+          },
+        });
+      }
     </script>
   </head>
 
@@ -190,41 +202,30 @@
           <form class="pure-form pure-form-aligned">
             <fieldset>
               <div class="pure-control-group">
-                <label for="aligned-name">Username</label>
-                <input type="text" id="aligned-name" placeholder="Username" />
-                <span class="pure-form-message-inline"
-                  >This is a required field.</span
-                >
+                <label for="aligned-server">Server</label>
+                <input type="text" id="aligned-server" placeholder="Server" />
               </div>
               <div class="pure-control-group">
-                <label for="aligned-password">Password</label>
-                <input
-                  type="password"
-                  id="aligned-password"
-                  placeholder="Password"
-                />
+                <label for="aligned-port">Port</label>
+                <input type="text" id="aligned-port" placeholder="Port" />
               </div>
               <div class="pure-control-group">
-                <label for="aligned-email">Email Address</label>
-                <input
-                  type="email"
-                  id="aligned-email"
-                  placeholder="Email Address"
-                />
-              </div>
-              <div class="pure-control-group">
-                <label for="aligned-foo">Supercalifragilistic Label</label>
+                <label for="aligned-deviceId">Device Id</label>
                 <input
                   type="text"
-                  id="aligned-foo"
-                  placeholder="Enter something here..."
+                  id="aligned-deviceId"
+                  placeholder="Device Id"
+                />
+              </div>
+              <div class="pure-control-group">
+                <label for="aligned-devicePass">Device Pass</label>
+                <input
+                  type="text"
+                  id="aligned-devicePass"
+                  placeholder="Device Pass"
                 />
               </div>
               <div class="pure-controls">
-                <label for="aligned-cb" class="pure-checkbox">
-                  <input type="checkbox" id="aligned-cb" /> I&#x27;ve read the
-                  terms and conditions
-                </label>
                 <button type="submit" class="pure-button pure-button-primary">
                   Submit
                 </button>
@@ -271,6 +272,27 @@
           </div>
 
           <div class="page"></div>
+          <form class="pure-form pure-form-aligned">
+            <fieldset>
+              <div class="pure-control-group">
+                <label for="aligned-ssid">SSID</label>
+                <input type="text" id="ssidName" />
+              </div>
+              <div class="pure-control-group">
+                <label for="aligned-password">Password</label>
+                <input
+                  type="password"
+                  id="aligned-password"
+                  placeholder="Password"
+                />
+              </div>
+              <div class="pure-controls">
+                <button type="submit" class="pure-button pure-button-primary">
+                  Submit
+                </button>
+              </div>
+            </fieldset>
+          </form>
         </div>
       </div>
       <!-- content -->
@@ -328,6 +350,7 @@
           elements.panelMqtt.classList.remove("block");
           elements.panelEvents.classList.remove("block");
           elements.panelWifi.classList.add("block");
+          get_config();
         }
       }
 
